--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -31,6 +31,9 @@
       <div class="form-group">
         <label for="password-signup">password:</label>
         <input class="form-input" type="password" id="password-signup" />
+        <small id="password-requirements">
+          be sure to include at least one uppercase letter, one lowercase, one symbol, and be at least 8 characters long.
+        </small>
       </div>
       <div class="form-group">
         <button class="btn btn-primary" type="submit">signup</button>
