--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -4,6 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Fund My Project!</title>
   <title>Pixelmaker</title>
   {{!-- Add CDN link below --}}
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.9.4/css/bulma.min.css">
@@ -13,26 +14,38 @@
 </head>
 
 <body>
+  <div class="flex-column justify-space-around">
+    <header class="display-flex justify-space-between align-center p-2">
+      <h1>
+        <span role="img" aria-label="money">💸</span>
+        <a href="/">Fund My Project!</a>
   <div class="container is-flex is-flex-direction-column is-justify-content-space-around">
     <header class="navbar is-flex is-justify-content-space-between is-align-items-center p-2">
       <h1 class="title">
         <span role="img" aria-label="game">🎮</span>
         <a href="/">Pixelmaker</a>
       </h1>
+      <nav>
       <nav class="navbar-end">
         <!-- Conditionally render login or logout links -->
         {{#if logged_in}}
+        <a href="/profile">profile</a> |
+        <button class="no-button" id="logout">logout</button>
         <a class="navbar-item" href="/profile">Profile</a>
         <button class="button is-danger" id="logout">Logout</button>
         {{else}}
+        <a href="/login">login</a>
         <a class="navbar-item" href="/login">Login</a>
         {{/if}}
       </nav>
     </header>
+    <main class="container container-fluid mt-5">
     <main class="section">
       <!-- Render the sub layout -->
       {{{ body }}}
     </main>
+    <footer>
+
     <footer class="footer">
       <div class="content has-text-centered">
         <p>Footer content here</p>
