--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -83,6 +83,12 @@
               Be sure to include at least one uppercase letter, one lowercase, one symbol, and be at least 8 characters long.
             </small>
           </div>
+            <div class="form-group">
+            <label>
+              <input type="checkbox" id="over-18-signup" />
+              I am over 18
+            </label>
+          </div>
           <div class="form-group">
             <button class="btn btn-primary" type="submit">Signup</button>
           </div>
@@ -91,32 +97,7 @@
     </div>
   </div>
 
-<<<<<<< HEAD
   <script src="./js/login.js"></script>
 </body>
-=======
-    <form class="form signup-form">
-      <div class="form-group">
-        <label for="name-signup">name:</label>
-        <input class="form-input" type="text" id="name-signup" />
-      </div>
-      <div class="form-group">
-        <label for="email-signup">email:</label>
-        <input class="form-input" type="text" id="email-signup" />
-      </div>
-      <div class="form-group">
-        <label for="password-signup">password:</label>
-        <input class="form-input" type="password" id="password-signup" />
-                <small id="password-requirements">
-          be sure to include at least one uppercase letter, one lowercase, one symbol, and be at least 8 characters long.
-        </small>
-      </div>
-      <div class="form-group">
-        <button class="btn btn-primary" type="submit">signup</button>
-      </div>
-    </form>
-  </div>
-</div>
->>>>>>> 13090d4c49c364ee6665a5a0d06ffb34fe2f0d17
 
 </html>
