--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -64,7 +64,7 @@
 </head>
 
 <body>
-  <div class="flash-message" id="flash-message">You have indicated that you are over 18</div>
+  <div class="flash-message" id="flash-message">Tyler Durden says Hi!</div>
   
   <div class="login-container">
     <div class="row">
