--- a/views/landingpage.handlebars
+++ b/views/landingpage.handlebars
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./css/landingpage.css">
-    <title>Pixelmaker</title>
+    <link rel="stylesheet" href="/css/landingpage.css">
+    <title>Gifrater</title>
 </head>
 <body>
     <header>
         <nav>
             <div class="nav-right">
-                <a href="../views/layouts/main.handlebars" class="login-btn">Login</a>
+                <a href="/login" class="login-btn">Login</a>
             </div>
         </nav>
     </header>
@@ -18,9 +18,10 @@
         <section class="hero">
             <h1>Welcome to Gif Rater</h1>
             <p>Your journey to greatness starts here!</p>
-            <button onclick="window.location.href='../views/layouts/main.handlebars'">Get Started Today!</button>
+            <button onclick="window.location.href='/login'">The Gifs Await!</button>
         </section>
     </main>
-    <script src="./js/landingpage.js"></script>
+   
+    
 </body>
 </html>
