debugged landing and login

--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -6,12 +6,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Login</title>
   <!-- Add CDN link for Bulma -->
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.9.4/css/bulma.min.css">
+  {{!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.9.4/css/bulma.min.css"> --}}
 
   <!-- Inline CSS for Background Image -->
   <style>
     body {
-      background-image: url('/public/cats-2048x984.jpg'); /* Adjust the path as needed */
+      background-image: url('/cats-2048x984.jpg'); /* Adjust the path as needed */
       background-size: cover;
       background-position: center;
       background-repeat: no-repeat;
