Changed login 2 to login

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -14,7 +14,7 @@
                 <a href="/gifrater" class="login-btn">Login</a> | 
                 <button class="logout-btn" id="logout">Logout</button>
                 {{else}}
-                <a href="/login" class="login-btn">Login 2</a>
+                <a href="/login" class="login-btn">Login</a>
                 {{/if}}
             </div>
         </nav>
