--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -11,7 +11,7 @@
   <!-- Inline CSS for Background Image -->
   <style>
     body {
-      background-image: url('/cats-2048x984.jpg'); /* Adjust the path as needed */
+      background-image: url('../media/cats-2048x984.jpg');
       background-size: cover;
       background-position: center;
       background-repeat: no-repeat;
